--- a/flutter_practice/android/gradle/wrapper/gradle-wrapper.properties
+++ b/flutter_practice/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
+#Tue Mar 04 20:33:17 JST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.3-all.zip
